# quick_launch

./: Cargo.toml  Makefile.toml  README.md
src/: main.rs  preferences.rs  usage_stats.rs
src/config/: app_config.rs  executables.rs  mod.rs  profile.rs
src/gui/: app.rs  assets.rs  icon_button.rs  mod.rs
src/lib/: arg_parser.rs  config.rs  fs_scan.rs  mod.rs
src/utils/: arg_parser.rs  build_tree.rs  config.rs  file_ops.rs  launch.rs  mod.rs  task.rs
