[package]
name = "quick_launch"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = {version = "0.31.1"}
eframe = {version = "0.31.1"}
confy = "1.0.0"
is_executable = "1.0.4"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.40", features = ["derive"] }
rfd = "0.15.3"