[package]
name = "quick_launch"
version = "0.1.0"
edition = "2024"

[package.metadata]
include = ["assets/fonts", "assets/icons"]

[dependencies]
egui = {version = "0.31.1"}
eframe = {version = "0.31.1"}
confy = "1.0.0"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
open = "5.3.2"
include_dir = "0.7.4"